[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Player/Snake/point_powerup.png" type="Texture" id=1]
[ext_resource path="res://Consumables/point_powerup.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 14 )

[node name="PointPowerup" type="Area2D" groups=["PointPowerup"]]
script = ExtResource( 2 )

[node name="PointPowerupSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ConsumedSound" type="AudioStreamPlayer2D" parent="."]
volume_db = -20.0

[connection signal="area_entered" from="." to="." method="_on_PointPowerup_area_entered"]
